--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -10,11 +10,10 @@
 ,
 "account_delete_dont_match_error": "اسم المستخدم الذي أدخلته لا يتطابق مع اسم المستخدم المرتبط بهذا الحساب."
 ,
-"search":"بحث",
-
 "commission": "العمولة",
 "calculate_scheme": "مخطط الاحتساب",
 "currency": "العملة",
+"search":"بحث",
   "join_our_mining_referral_program": "انضم إلى برنامج الإحالة لتعدين العملات واربح مع الأصدقاء! قم بدعوة واحصل على مكافآت لكل مشارك جديد. كلما زاد عدد الأصدقاء، زادت الأرباح.",
   "the_reward_is_paid_out": "يتم دفع الجائزة من صندوق البوول، ولا يفقد كل من الشخص المدعو والشخص المدعي له ربحيتهما، وتبقى عمولتهما دون تغيير.",
   "levels_info": "المستويات:\nمبتدئ - هذه الميزة متاحة افتراضيًا.\nخبير - لتفعيل الميزة، يجب عليك تراكم إجمالي على الأقل 30 Ph/s.\nسفير - لتفعيل الميزة، يجب عليك تراكم إجمالي على الأقل 100 Ph/s.",
@@ -23,12 +22,13 @@
   "referral_levels": "مستويات الإحالة",
   "level": "المستوى",
   "price": "السعر",
+  "threshold": "عتبة",
   "current_password": "كلمة المرور الحالية",
   "change": "تغيير",
   "referral_program": "برنامج الإحالة",
   "available":"متاح",
   "unavailable": "غير متاح"
-,
+,"comission": "عمولة",
   "ambassador": "سفير",
   "noob": "مبتدئ",
   "expert": "خبير",
