--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -6,6 +6,9 @@
   "your_token_to_subscribe":"Your token to subscribe:",
   "select":"Select",
   "search":"Search",
+  "commission":"Commission",
+  "calculate_scheme":"Accrual scheme",
+  "currency":"Currency",
   "your_previus_application_is_under_review":"* Your previous application is under review. If you want to change the percentage, write to technical support.",
   "join_our_mining_referral_program":"Join our mining referral program and earn with friends! Invite and get rewards for each new participant. More friends, more earnings.",
   "the_reward_is_paid_out":"The reward is paid out of the pool's fund, and both the invitee and the inviter do not lose their profitability, and their commission remains unchanged.",
@@ -14,9 +17,6 @@
   "if_your_invited_referral":"*If your invited referral invites new users and becomes an expert or an ambassador, and they lower their commission rate, your earnings will decrease depending on your referral's commission rate.",
   "referral_levels":"Referral levels",
   "level":"Level",
-  "commission":"Commission",
-  "calculate_scheme":"Accrual scheme",
-  "currency":"Currency",
   "available":"Available",
   "the_added_and_changed_wallet":"* The added or changed wallet will be verified within 24 hours. During this period, auto-payments will not be available",
   "price":"Price",
@@ -30,7 +30,9 @@
   "total_profit":"Total profit",
   "total_referral_accounts":"Total referral accounts",
   "referral_link":"Referral link",
-  "pool_fee_for_client":"Pool fee for clinet",
+  "pool_fee_for_client":"Pool fee for client",
+  "comission":"Comission",
+  "threshold":"Threshold",
   "referral_fee":"Referral fee",
   "reward_fee":"Reward fee",
   "generate_referral_link":"Generate referral link",
