--- a/assets/translations/pt.json
+++ b/assets/translations/pt.json
@@ -10,10 +10,10 @@
 ,
 "account_delete_dont_match_error": "O nome de usuário que você inseriu não corresponde ao nome de usuário associado a esta conta."
 ,
-"search":"Pesquisar",
 "commission": "Comissão",
 "currency": "Moeda",
 "calculate_scheme": "Esquema de cálculo",
+"search":"Pesquisar",
   "join_our_mining_referral_program": "Junte-se ao nosso programa de referência de mineração e ganhe com amigos! Convide e obtenha recompensas para cada novo participante. Quanto mais amigos, mais ganhos.",
   "the_reward_is_paid_out": "A recompensa é paga a partir do fundo do pool, e tanto o convidado quanto o convidador não perdem sua rentabilidade, e sua comissão permanece inalterada.",
   "levels_info": "Níveis:\nIniciante - este recurso está disponível por padrão.\nPerito - Para ativar o recurso, você precisa acumular um total de pelo menos 30 Ph/s.\nEmbaixador - Para ativar o recurso, você precisa acumular um total de pelo menos 100 Ph/s.",
@@ -23,8 +23,9 @@
   "level": "Nível",
   "price": "Preço",
   "available":"Disponível",
+  "threshold": "Limiar",
   "unavailable": "Indisponível"
-,
+,"comission": "Comissão",
   "current_password": "Senha atual",
   "change": "Alterar",
   "referral_program": "Programa de indicação",
