canged design and keys and added info_

--- a/assets/translations/kk.json
+++ b/assets/translations/kk.json
@@ -43,8 +43,8 @@
   "generate": "Жасау",
   "security_dont_support": "Рұқсат жоқ немесе құрылғы қолдамайды!",
   "unlock_with_faceid": "Face ID пайдалану",
-  "to_unlock_pool": "21Pool-ге қол жеткізу үшін Face ID арқылы ашу",
-  "unlock_pool": "21Pool-ді ашу",
+  "to_unlock_pool": "BTCPool-ге қол жеткізу үшін Face ID арқылы ашу",
+  "unlock_pool": "BTCPool-ді ашу",
   "auth_with_faceid": "Face ID арқылы аутентификация",
   "security": "Қауіпсіздік",
   "daily": "Күн сайын",
@@ -52,14 +52,6 @@
   "profitability_calculator": "Табыс калькуляторы",
   "calculate": "Есептеу",
   "loading": "Жүктелуде",
-  "estimated_24_hour_revenue": "Күндік болжамды табыс",
-  "estimated_30_day_revenue": "Айлық болжамды табыс",
-  "power_cost_per_day": "Күндік энергия құны",
-  "power_cost_per_month": "Айлық энергия құны",
-  "profit_cost_per_day": "Күндік табыс",
-  "profit_cost_per_month": "Айлық табыс",
-  "power_cost_per_kwh": "Энергия құны кВт/сағ",
-  "power_consumption": "Энергия тұтыну",
   "pool_fee": "Пул комиссиясы",
   "to_setup_low_hashrate_notification": "* Хэшрейт төмендеуі туралы хабарлама қосу үшін:\n1) Токеніңізді көшіріңіз\n2) Телеграм ботының чатына өтіңіз\n3) «Бастау» түймесін басыңыз\n4) Жауап алғаннан кейін, көшірілген Токенді қойып, жіберу түймесін басыңыз",
   "url_for_bot": "Ботқа сілтеме:",
@@ -201,5 +193,9 @@
   "edit_wallet_address": "Әмиян мекенжайын өзгерту",
   "current_wallet_address": "Ағымдағы әмиян мекенжайы",
   "new_wallet_address": "Жаңа әмиян мекенжайы",
-  "cancel": "Болдырмау"
+  "cancel": "Болдырмау",
+  "install_google_identifier":"Google идентификатор қолданбасын орнатыңыз (iOS/Android)",
+  "open_the_app_add_account":"Қолданбаны ашып, BTCPool аккаунтыңызды қосыңыз. Ол үшін QR кодты сканерлеңіз немесе кодты енгізіңіз:",
+  "enter_six_code_and_connect":"Қолданбадағы 6 таңбалы кодты енгізіп, «Қосу» батырмасын басыңыз",
+  "sss":"sss"
 }
