--- a/assets/translations/kk.json
+++ b/assets/translations/kk.json
@@ -48,14 +48,16 @@
   "auth_with_faceid": "Face ID арқылы аутентификация",
   "security": "Қауіпсіздік",
   "daily": "Күн сайын",
+  "total_average_hashrate_10min": "Барлық орташа хешрейт 10 минут",
+    "for_hour":"Сағатына",
+    "for_day":"Күніне",
+    "total_obshii":"Барлығы",
   "monthly": "Ай сайын",
   "profitability_calculator": "Табыс калькуляторы",
   "calculate": "Есептеу",
   "loading": "Жүктелуде",
   "pool_fee": "Пул комиссиясы",
-  "to_setup_low_hashrate_notification": "* Хэшрейт төмендеуі туралы хабарлама қосу үшін:\n1) Токеніңізді көшіріңіз\n2) Телеграм ботының чатына өтіңіз\n3) «Бастау» түймесін басыңыз\n4) Жауап алғаннан кейін, көшірілген Токенді қойып, жіберу түймесін басыңыз",
-  "url_for_bot": "Ботқа сілтеме:",
-  "telegram_notification": "Telegram арқылы хабарлама",
+  "active_miners":"Қосулы майнерлар",
   "revenue_change_info": "Табыс майнингтің күрделілігі мен биткоиннің бағасына байланысты өзгеріп отырады.",
   "username_login": "Пайдаланушы аты (логин)",
   "confirm_delete_account": "Аккаунтыңызды жоюды растайсыз ба?",
@@ -127,7 +129,6 @@
   "hour": "сағат",
   "day": "күн",
   "connection_to_mining": "Майнингке қосылу",
-  "worker_name_after_the_dot_can_be_arbitrary_must_consist_of_numbers_or_lowercase_letters_and_maximum_length_is_30_characters": "Жұмысшының аты (нүктеден кейін) еркін болуы мүмкін, тек цифрлар немесе кіші әріптерден тұруы керек және максималды ұзындығы 30 таңба болуы керек.",
   "worker": "Жұмысшы",
   "password": "Пароль",
   "earnings": "Табыс",
