--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -32,23 +32,13 @@
   "registration_date": "Дата регистрации",
   "country": "Страна",
   "generate": "Сгенерировать",
-  "noob": "Новичок",
-  "expert": "Эксперт",
+ 
   "personal_settings": "Личные настройки",
   "total_profit": "Общая прибыль",
-  "to_setup_low_hashrate_notification":"* Для подключения уведомления о снижении хэшрейта:\n1) Скопируйте ваш Токен\n2) Перейдите по ссылке в чат с телеграм ботом\n3) Нажмите «начать»\n4) После получения ответа, вставьте скопированный Токен и нажмите отправить",
-  "url_for_bot":"Ссылка на бота:",
-  "telegram_notification":"Уведомление в Telegram",
-  "your_token_to_subscribe":"Ваш токен для подписки:",
-  "total_referral_accounts": "Общее количество реферальных аккаунтов",
-  "referral_link": "Реферальная ссылка",
   "pool_fee_for_client": "Комиссия за пул для клиента",
-  "referral_fee": "Комиссия за рефералов",
 
-  "daily": "Ежедневно",
-  "monthly": "Ежемесячно",
-  "profitability_calculator": "Калькулятор доходности",
-  "calculate": "Рассчитать",
+  
+
   "loading": "Загрузка",
   
 
@@ -114,7 +104,7 @@
     "account_name": "Имя учетной записи",
     "calculation_method": "Метод вычисления",
     "split": "Разделить",
-    "the_table_is_empty": "Таблица пуста",
+    "the_table_is_empty": "Пусто",
     "url_card_title":"Имя рабочего (после точки) может быть произвольным, должно состоять из цифр или строчных букв и иметь максимальную длину 30 символов.",
     "hashrate_card_t1": "Хэшрейт\nТекущий/24ч",
     "hashrate_card_t2":"Хэшрейт\nТекущий/1H/24H",
@@ -129,14 +119,13 @@
     "est_profitability":"Ожидаемая прибыльность",
     "subaccounts": "Субаккаунты",
     "create_new_subaccount": "Создать новый субаккаунт",
-    "dashboard": "Дашборд",
+    "dashboard": "Главная",
     "current":"Текущий",
 
     "day": "день",
     "connection_to_mining": "Подключение к майнингу",
-    "worker_name_after_the_dot_can_be_arbitrary_must_consist_of_numbers_or_lowercase_letters_and_maximum_length_is_30_characters": "Имя воркера (после точки) может быть произвольным, должно состоять из цифр или строчных букв, и максимальная длина - 30 символов.",
     "worker": "Воркер",
-    "log_out": "Выйти",
+        "log_out": "Выйти",
     "earnings": "Заработок",
     "date": "Дата",
     "api_keys": "Ключи API",
@@ -189,6 +178,11 @@
     "status": "Статус",
     "total_current_hashrate": "Общий текущий хешрейт",
     "total_average_hashrate_24h": "Общий средний хешрейт за 24 часа",
+    "total_average_hashrate_10min": "Общий средний хешрейт за 10 минут",
+    "for_hour":"За час",
+    "for_day":"За день",
+    "total_obshii":"Общий",
+    "active_miners":"Активные майнеры",
     "fee": "Комиссия",
     "average_hashrate_24h": "Средний хешрейт за 24 часа",
     "payments_thresholds": "Пороги платежей",
